<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/Text1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/base_rate"
        android:textSize="24sp"
        android:paddingTop="60dp"
        android:paddingStart="26dp"
        android:textColor="@android:color/black"/>


    <EditText
        android:id="@+id/edittext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/Text1"
        android:gravity="center_horizontal"
        android:hint="@string/enter_value"
        android:inputType="number|numberDecimal"
        android:paddingStart="16dp"
        android:paddingTop="60dp" />

    <Button
        android:id="@+id/cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/edittext1"
        android:layout_marginTop="48dp"
        android:layout_marginStart="20dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/cal"
        android:background="@drawable/button"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/TextView04"
                android:text="">

            </TextView>

            <TextView
                android:id="@+id/Text2"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:text="@string/_24_cr"
                android:typeface="serif"
                android:textColor="@android:color/black">

            </TextView>

            <TextView
                android:id="@+id/Text3"
                android:gravity="center_horizontal"
                android:text="@string/_22_cr"
                android:textSize="20sp"
                android:typeface="serif"
                android:textColor="@android:color/black">

            </TextView>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/Text4"
                android:gravity="center_horizontal"
                android:text="@string/_1_tula"
                android:textSize="20sp"
                android:textColor="@android:color/black">

            </TextView>

            <TextView
                android:id="@+id/output1"
                android:textSize="18sp"
                android:gravity="center_horizontal">

            </TextView>

            <TextView
                android:id="@+id/output2"
                android:textSize="18sp"
                android:gravity="center_horizontal">

            </TextView>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/Text5"
                android:gravity="center_horizontal"
                android:text="@string/_1_2_tula"
                android:textSize="20sp"
                android:textColor="@android:color/black">

            </TextView>

            <TextView
                android:id="@+id/output3"
                android:textSize="18sp"
                android:gravity="center_horizontal">

            </TextView>

            <TextView
                android:id="@+id/output4"
                android:textSize="18sp"
                android:gravity="center_horizontal">

            </TextView>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/Text6"
                android:gravity="center_horizontal"
                android:text="@string/_1_4_tula"
                android:textSize="20sp"
                android:textColor="@android:color/black">

            </TextView>

            <TextView
                android:id="@+id/output5"
                android:textSize="18sp"
                android:gravity="center_horizontal">

            </TextView>

            <TextView
                android:id="@+id/output6"
                android:textSize="18sp"
                android:gravity="center_horizontal">

            </TextView>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/Text7"
                android:gravity="center_horizontal"
                android:text="@string/_1_gram"
                android:textSize="20sp"
                android:textColor="@android:color/black">

            </TextView>

            <TextView
                android:id="@+id/output7"
                android:textSize="18sp"
                android:gravity="center_horizontal">

            </TextView>

            <TextView
                android:id="@+id/output8"
                android:textSize="18sp"
                android:gravity="center_horizontal">

            </TextView>

        </TableRow>
    </TableLayout>
</RelativeLayout>
