<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/Text1n"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/base_raten"
        android:textSize="24sp"
        android:paddingTop="60dp"
        android:paddingStart="26dp"
        android:textColor="@android:color/black"/>


    <EditText
        android:id="@+id/edittext1n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/Text1n"
        android:gravity="center_horizontal"
        android:hint="@string/enter_value"
        android:inputType="number|numberDecimal"
        android:paddingStart="16dp"
        android:paddingTop="60dp" />

    <Button
        android:id="@+id/caln"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_toEndOf="@id/edittext1n"
        android:background="@drawable/button"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/caln" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_below="@id/Text1n"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:shrinkColumns="*"
        android:stretchColumns="*">

    <TableRow
        android:id="@+id/tableRow1n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:paddingTop="32dp"
       >

        <TextView
            android:id="@+id/Text2n"
            android:gravity="center_horizontal"
            android:text="@string/_24_ctn"
            android:textSize="20sp"
            android:textColor="@android:color/black">

        </TextView>

        <TextView
            android:id="@+id/output1n"
            android:textSize="18sp"
            android:gravity="center_horizontal">

        </TextView>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:paddingTop="32dp">

        <TextView
            android:id="@+id/Text3n"
            android:gravity="center_horizontal"
            android:text="@string/_22_ctn"
            android:textSize="20sp"
            android:textColor="@android:color/black">

        </TextView>

        <TextView
            android:id="@+id/output2n"
            android:textSize="18sp"
            android:gravity="center_horizontal">

        </TextView>
    </TableRow>
    </TableLayout>


</RelativeLayout>

